# strawpot

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  LICENSE  PLAN.md  README.md  TODO.md  go.mod  go.sum  pyproject.toml
cli/: README.md  pyproject.toml
cli/examples/: README.md  game-engine-cpp.claude.md  web-api-python.claude.md  web-frontend-react.claude.md
cli/src/strawpot/: __init__.py  __main__.py  _process.py  activity.py  ask_user_bridge.py  cancel.py  cli.py  config.py  context.py  delegation.py  doctor.py  merge.py  progress.py  session.py  trace.py
cli/src/strawpot/_builtin_agents/claude_code/: AGENT.md  wrapper.py
cli/src/strawpot/_builtin_agents/claude_code/wrapper/: go.mod  main.go
cli/src/strawpot/agents/: interactive.py  protocol.py  registry.py  wrapper.py
cli/src/strawpot/init/: cli.py  drift.py  engine.py  exceptions.py  generator.py  hint.py  loader.py  questionnaire.py  renderer.py  types.py  writer.py
cli/src/strawpot/init/archetypes/game-client/: template.yaml
cli/src/strawpot/init/layers/: cpp.yaml  go.yaml  python.yaml  rust.yaml  typescript.yaml
cli/src/strawpot/isolation/: protocol.py  worktree.py
cli/src/strawpot/mcp/: server.py  setup.py  status.py
cli/src/strawpot/memory/: breadcrumbs.py  consolidation.py  embeddings.py  graph.py  importance.py  protocol.py  registry.py  standalone.py
cli/src/strawpot/scheduler/: store.py
cli/src/strawpot/scheduler/templates/: __init__.py  issue-triage.yaml  pr-review.yaml  test-coverage.yaml
cli/tests/: conftest.py  test_activity.py  test_agents_interactive.py  test_agents_protocol.py  test_agents_registry.py  test_agents_wrapper.py  test_ask_user_bridge.py  test_breadcrumbs.py  test_builtin_claude_code.py  test_cancel.py  test_cancel_integration.py  test_cli.py  test_cli_bootstrap.py  test_cli_cancel.py  test_cli_forget_memory_list.py  test_cli_getting_started.py  test_cli_headless.py  test_cli_memory_commands.py  test_cli_run.py  test_cli_semantic_graph.py  test_cli_sessions_agents.py  test_config.py  test_consolidation.py  test_context.py  test_delegation.py  test_delegation_cache.py  test_doctor.py  test_embeddings.py  test_examples.py  test_graph.py  test_importance.py  test_init_cli.py  test_init_drift.py  test_init_engine.py  test_init_hint.py  test_init_integration.py  test_init_loader.py  test_init_questionnaire.py  test_init_renderer.py  test_init_template_validation.py  (+17 more)
cli/tests/e2e/: conftest.py  stub_agent.py  stub_agent_delegate.py  stub_wrapper.py  test_delegation_flow.py  test_error_handling.py  test_memory_e2e.py  test_session_lifecycle.py  test_worktree_isolation.py
core/: cli.py  (+2 more)
gui/: DESIGN.md  pyproject.toml
gui/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
gui/frontend/src/: App.tsx  index.css  main.tsx
gui/frontend/src/api/: client.ts  types.ts
gui/frontend/src/components/: ActiveAgentsPanel.tsx  AgentActivityCard.tsx  AgentActivityStatus.tsx  AgentLogViewer.tsx  AgentSetupGuide.tsx  AgentTreeFlow.tsx  ChatPanel.tsx  CollapsibleMessage.test.tsx  CollapsibleMessage.tsx  CommandPalette.tsx  ConfigForm.test.tsx  ConfigForm.tsx  CreateOneTimeScheduleDialog.tsx  CreateScheduleDialog.tsx  DirBrowser.tsx  InstallDialog.tsx  IntegrationDetailSheet.tsx  IntegrationLogSheet.tsx  KeyboardShortcutsDialog.tsx  LaunchDialog.tsx  MarkdownContent.tsx  Pagination.tsx  ProjectActivityTab.tsx  ProjectFilesTab.tsx  ProjectIntegrationsTab.tsx  ProjectResourcesTab.tsx  ResourceConfigForm.tsx  ResourceDetailSheet.tsx  RoleQuickSwitch.tsx  SessionTable.tsx  SourceBadge.tsx  UpdateAllDialog.tsx  ViewToggle.tsx
gui/frontend/src/components/charts/: DurationTrendsChart.tsx  RunFrequencyChart.tsx  SuccessRateDonut.tsx
gui/frontend/src/components/skeletons/: DashboardSkeleton.tsx  ProjectDetailSkeleton.tsx  SessionDetailSkeleton.tsx
gui/frontend/src/hooks/: useAgentLogSSE.ts  useApi.ts  useAskUserSSE.ts  useGlobalSSE.ts  useGlobalWS.ts  useIntegrationLogWS.ts  useKeyboardShortcuts.ts  usePromptHistory.test.ts  usePromptHistory.ts  useSessionWS.test.ts  useSessionWS.ts  useSubmitGuard.test.ts  useSubmitGuard.ts  useTraceSSE.ts  useTreeSSE.ts
gui/frontend/src/hooks/mutations/: use-ask-user.ts  use-config.ts  use-conversations.ts  use-integrations.ts  use-project-resources.ts  use-projects.ts  use-registry.ts  use-schedules.ts  use-sessions.ts  use-settings.ts
gui/frontend/src/hooks/queries/: use-config.ts  use-conversations.ts  use-integrations.ts  use-project-resources.ts  use-projects.ts  use-registry.ts  use-resource-config.ts  use-roles.ts  use-schedules.ts  use-sessions.ts  use-settings.ts  use-stats.ts
gui/frontend/src/layouts/: AppLayout.tsx
gui/frontend/src/lib/: agent-activity.test.ts  agent-activity.ts  query-keys.ts  utils.ts
gui/frontend/src/pages/: ConversationView.tsx  Dashboard.tsx  ImuPage.tsx  Integrations.tsx  NotFound.tsx  OneTimeSchedules.tsx  ProjectDetail.tsx  ProjectList.tsx  ResourceBrowser.tsx  ScheduleRuns.tsx  ScheduledTasks.tsx  SessionDetail.tsx  Settings.tsx
gui/src/strawpot_gui/: __init__.py  __main__.py  app.py  config_helpers.py  db.py  event_bus.py  scheduler.py  server.py  sse.py
gui/src/strawpot_gui/routers/: config.py  conversations.py  files.py  fs.py  health.py  imu.py  integrations.py  logs.py  project_resources.py  projects.py  registry.py  schedules.py  sessions.py  settings.py  sse.py  stats.py  ws.py
gui/tests/: conftest.py  test_agent_log_sse.py  test_ask_user_respond.py  test_config.py  test_conversations.py  test_event_bus.py  test_files.py  test_fs.py  test_global_events_sse.py  test_health.py  test_imu.py  test_integrations_api.py  test_integrations_db.py  test_project_resources.py  test_projects.py  test_registry.py  test_scheduler.py  test_schedules.py  test_server.py  test_session_cost.py  test_session_delete.py  test_session_events_sse.py  test_session_launch.py  test_session_stop.py  test_session_tree_sse.py  test_session_ws.py  test_sessions.py  test_sessions_list_all.py  test_sessions_sync.py  test_sse_unit.py  test_stats.py  test_task_queue.py  test_via_middleware.py
(+208 files in other folders)
