[project]
name = "strawpot"
version = "0.1.0"
description = "Lightweight CLI for agent orchestration"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
]

[project.scripts]
strawpot = "strawpot.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
