[project]
name = "strawpot"
dynamic = ["version"]
description = "Lightweight CLI for agent orchestration"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "StrawPot Contributors"}]
keywords = ["agent", "orchestration", "cli", "multi-agent", "grpc"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "click>=8.1",
    "croniter>=6.2.2",
    "mcp>=1.0",
    "pyyaml>=6.0",
    "tomli_w>=1.0",
    "strawhub",
    "strawpot-memory",
    "denden-server",
    # Security: pin minimum versions for transitive dependencies
    "cryptography>=46.0.6",
    "certifi>=2026.2.25",
]

[project.urls]
Homepage = "https://github.com/strawpot/strawpot"
Repository = "https://github.com/strawpot/strawpot"
Issues = "https://github.com/strawpot/strawpot/issues"

[project.scripts]
strawpot = "strawpot.cli:cli"
strawpot-mcp = "strawpot.mcp.server:main"

[project.optional-dependencies]
gui = [
    "strawpot-gui",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=6.0",
    "coverage>=7.13.5",
    "pytest-timeout>=2.0",
    "pyinstaller>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
timeout = 30
asyncio_mode = "strict"
markers = [
    "e2e: End-to-end tests (may be slower, require git)",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
root = ".."
tag_regex = "^v(?P<version>[\\d.]+)$"
git_describe_command = ["git", "describe", "--dirty", "--tags", "--long", "--match", "v*"]

[build-system]
requires = ["setuptools", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"
